--- a/12_DOM_Manipulation/app.css
+++ b/12_DOM_Manipulation/app.css
@@ -3,6 +3,11 @@ h1 {
   font-size: 60px;
 }
 
+h1:hover {
+  color: orange;
+  font-size: 80px;
+}
+
 #bear-photo {
   width: 250px;
 }
@@ -13,7 +18,7 @@ h1 {
   border: 1px solid teal;
 }
 
-input[type="password"] {
+input[type='password'] {
   height: 50px;
   width: 100px;
 }
