--- a/12_DOM_Manipulation/app.css
+++ b/12_DOM_Manipulation/app.css
@@ -22,3 +22,14 @@ input[type='password'] {
   height: 50px;
   width: 100px;
 }
+
+.todo {
+  font-size: 30px;
+  color: olive !important;
+}
+
+.done {
+  color: gray !important;
+  text-decoration: line-through;
+  opacity: 50%;
+}
